--- a/src/Components/Utils/Styles/Scripts.css
+++ b/src/Components/Utils/Styles/Scripts.css
@@ -10,7 +10,7 @@
 
 .script-toggle {
   appearance: none;
-  visibility: hidden;
+  display: none;
 }
 
 .script {
@@ -33,6 +33,7 @@
   margin: auto;
   cursor: pointer;
   position: relative;
+  left: -20px;
   height: 300px;
   width: 240px;
   padding: 10px;
@@ -183,7 +184,7 @@
 
 .loader-subtitle {
   width: 150px;
-} 
+}
 
 .hole-1,
 .hole-2,
